# ship-operation-simulator

./: DisplayWidget  MainWindow  README.md  SettingWidget  controller.cpp  controller.h  display2d.cpp  display2d.h  display3d.cpp  display3d.h  displaypage.cpp  displaypage.h  main.cpp  mainwindow.cpp  mainwindow.h  raindrop.cpp  raindrop.h  settingpage.cpp  settingpage.h  ship-operation-simulator.pro
SO_s/: SO_s.sln
SO_s/SO_s/: SO_s.aps  SO_s.vcxproj  SO_s.vcxproj.filters  WinMain.cpp  aa.cpp  aa.h  resource.h
SO_s/SO_s/src/core/: Application.cpp  Application.h
SO_s/SO_s/src/graphics/: Renderer.cpp  Renderer.h
SO_s/SO_s/src/input/: InputManager.cpp  InputManager.h
SO_s/SO_s/src/physics/: BoatPhysics.cpp  BoatPhysics.h
SO_s/SO_s/src/ui/: UIManager.cpp  UIManager.h
SO_s/SO_s/x64/Debug/: vc143.idb
SO_s/SO_s/x64/Debug/SO_s.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SO_s.lastbuildstate
ShipSimulator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h  ship.cpp  ship.h  shipmodel.cpp  shipmodel.h
